--- a/roles/m4e/tasks/moodle.yml
+++ b/roles/m4e/tasks/moodle.yml
@@ -28,34 +28,11 @@
         secret_data: "{{ moodle_secret_data }}"
       import_tasks: k8s/object.yml
 
-    - name: set moodle new instance job fact
-      when:
-        - k8s_postgres_pvc is changed
-        - k8s_postgres_pvc.method is defined
-        - "'create' in k8s_postgres_pvc.method"
-        - k8s_postgres_deploy is changed
-        - k8s_postgres_deploy.method is defined
-        - "'create' in k8s_postgres_deploy.method"
-        - k8s_moodle_pvc is changed
-        - k8s_moodle_pvc.method is defined
-        - "'create' in k8s_moodle_pvc.method"
-        - moodle_new_instance_agree_license | bool
-      set_fact:
-        moodle_new_instance: true
-
-    - name: set moodle new instance job absent fact
-      when: "moodle_secret_state | default(moodle_state) == 'absent'"
-      set_fact:
-        moodle_new_instance_absent: true
-
     - name: moodle instance
-      when: moodle_new_instance | default(false) or
-            moodle_new_instance_absent | default(false)
+      when: not resource_status_properties.instantiated | default('False') | bool
       block:
-        - name: include instantiated status
-          vars:
-            instantiated_condition: false
-          import_tasks: status/main.yml
+        - name: include not instantiated status
+          import_tasks: condition/instantiated/not_instantiated.yml
 
         - name: set moodle new instance job spec
           when: moodle_new_instance_job_spec is not defined
@@ -80,9 +57,7 @@
           import_tasks: k8s/object.yml
 
         - name: include instantiated status
-          vars:
-            instantiated_condition: true
-          import_tasks: status/main.yml
+          import_tasks: condition/instantiated/instantiated.yml
 
     - name: set moodle cronjob spec
       when: moodle_cronjob_spec is not defined
