refactor: remove moodle jobs and pods cleanup

--- a/roles/m4e/tasks/moodle/new.yml
+++ b/roles/m4e/tasks/moodle/new.yml
@@ -1,4 +1,4 @@
-- name: moodle instance
+- name: moodle new instance
   when: not resource_status_properties.instantiated | default('False') | bool
   block:
     - name: include not instantiated status
