feat: add option to wait for ingress ip

--- a/config/samples/m4e_v1alpha1_m4e_gke.yaml
+++ b/config/samples/m4e_v1alpha1_m4e_gke.yaml
@@ -11,3 +11,4 @@ spec:
   moodle_new_instance_adminmail: admin@example.com
   moodle_new_instance_agree_license: true
   nginx_service_type: NodePort
+  nginx_ingress_wait_for_ip: true
