--- a/roles/m4e/tasks/moodle/main.yml
+++ b/roles/m4e/tasks/moodle/main.yml
@@ -16,7 +16,7 @@
 
     - name: save moodle pvc resource definition task output
       set_fact:
-        k8s_moodle_pvc: "{{ k8s_task }}"
+        k8s_moodle_pvc: "{{ k8s_object_task }}"
 
     - name: moodle config.php secret resource definition
       vars:
