--- a/roles/m4e/tasks/postgres.yml
+++ b/roles/m4e/tasks/postgres.yml
@@ -17,7 +17,7 @@
 
     - name: save postgres pvc resource definition task output
       set_fact:
-        k8s_postgres_pvc: "{{ k8s_task }}"
+        k8s_postgres_pvc: "{{ k8s_object_task }}"
 
     - name: postgres secret resource definition
       vars:
@@ -57,4 +57,4 @@
 
     - name: save postgres deploy resource definition task output
       set_fact:
-        k8s_postgres_deploy: "{{ k8s_task }}"
+        k8s_postgres_deploy: "{{ k8s_object_task }}"
