--- a/roles/m4e/tasks/k8s/status.yml
+++ b/roles/m4e/tasks/k8s/status.yml
@@ -3,8 +3,8 @@
   when:
     - not ansible_check_mode # https://github.com/operator-framework/operator-sdk-ansible-util/issues/18
   k8s_status:
-    api_version: "{{ k8s_status_api_version | default(api_version) }}"
-    kind: "{{ k8s_status_kind | default(kind)}}"
+    api_version: "{{ k8s_status_api_version | default(cr_api_version) }}"
+    kind: "{{ k8s_status_kind | default(cr_kind)}}"
     name: "{{ k8s_status_name | default(meta_name) }}"
     namespace: "{{ k8s_status_namespace | default(meta_namespace) }}"
     status: "{{ k8s_status_status | default(omit,true) }}"
