--- a/roles/m4e/defaults/main/php-fpm.yml
+++ b/roles/m4e/defaults/main/php-fpm.yml
@@ -7,6 +7,7 @@ php_fpm_appname: "{{ meta_name }}-php-fpm"
 php_fpm_service: "{{ php_fpm_appname }}-service"
 php_fpm_deploy: "{{ php_fpm_appname }}-deploy"
 php_fpm_args: "['php-fpm']"
+php_fpm_container_name: "{{ php_fpm_appname }}"
 php_fpm_readiness_probe: true
 php_fpm_readiness_command: "['/usr/libexec/check-container-php', '-t', '-r']"
 php_fpm_readiness_initial: 5
