chore: lint code
- update ansible lint rules
- lint code
- update pr image

--- a/roles/m4e/tasks/k8s/status.yml
+++ b/roles/m4e/tasks/k8s/status.yml
@@ -1,10 +1,11 @@
 - name: set status
   register: k8s_status_task
   when:
-    - not ansible_check_mode # https://github.com/operator-framework/operator-sdk-ansible-util/issues/18
+    # https://github.com/operator-framework/operator-sdk-ansible-util/issues/18
+    - not ansible_check_mode
   k8s_status:
     api_version: "{{ k8s_status_api_version | default(cr_api_version) }}"
-    kind: "{{ k8s_status_kind | default(cr_kind)}}"
+    kind: "{{ k8s_status_kind | default(cr_kind) }}"
     name: "{{ k8s_status_name | default(meta_name) }}"
     namespace: "{{ k8s_status_namespace | default(meta_namespace) }}"
     status: "{{ k8s_status_status | default(omit,true) }}"
