--- a/roles/m4e/tasks/moodle/new-instance-job.yml
+++ b/roles/m4e/tasks/moodle/new-instance-job.yml
@@ -26,5 +26,9 @@
         job_spec: "{{ moodle_new_instance_job_spec }}"
       import_tasks: k8s/object.yml
 
+    - name: save moodle new instance job resource definition task
+      set_fact:
+        k8s_moodle_new_instance_job: "{{ k8s_object_task }}"
+
     - name: include instantiated status
       import_tasks: condition/instantiated/instantiated.yml
