--- a/roles/m4e/tasks/postgres.yml
+++ b/roles/m4e/tasks/postgres.yml
@@ -6,55 +6,10 @@
     component: postgres
     metadata_app: "{{ postgres_appname }}"
   block:
-    - name: postgres pvc resource definition
-      vars:
-        kind: PersistentVolumeClaim
-        k8s_state: "{{ postgres_pvc_state | default(postgres_state) }}"
-        template: "{{ pvc_template }}"
-        metadata_name: "{{ postgres_pvc }}"
-        pvc_spec: "{{ postgres_pvc_spec }}"
-      import_tasks: k8s/object.yml
+    - import_tasks: postgres/pvc.yml
 
-    - name: save postgres pvc resource definition task output
-      set_fact:
-        k8s_postgres_pvc: "{{ k8s_object_task }}"
+    - import_tasks: postgres/secret.yml
 
-    - name: postgres secret resource definition
-      vars:
-        kind: Secret
-        k8s_state: "{{ postgres_secret_state | default(postgres_state) }}"
-        template: "{{ secret_template }}"
-        metadata_name: "{{ postgres_secret }}"
-        secret_data: "{{ postgres_secret_data }}"
-      import_tasks: k8s/object.yml
+    - import_tasks: postgres/deploy.yml
 
-    - name: postgres service resource definition
-      vars:
-        kind: Service
-        k8s_state: "{{ postgres_service_state | default(postgres_state) }}"
-        template: "{{ service_template }}"
-        metadata_name: "{{ postgres_service }}"
-        service_spec: "{{ postgres_service_spec }}"
-      import_tasks: k8s/object.yml
-
-    - name: set postgres deploy spec
-      when: postgres_deploy_spec is not defined
-      set_fact:
-        postgres_deploy_spec: "{{ lookup('template', postgres_deploy_spec_template) }}"
-
-    - name: postgres deploy resource definition
-      vars:
-        kind: Deployment
-        k8s_state: "{{ postgres_deploy_state | default(postgres_state) }}"
-        k8s_wait: "{{ postgres_deploy_wait | default(true) }}"
-        k8s_wait_timeout: "{{ postgres_deploy_wait_timeout | default(120) }}"
-        template: "{{ deploy_template }}"
-        metadata_name: "{{ postgres_deploy }}"
-        annotations: "{{ postgres_deploy_annotations | default(false) }}"
-        runtime: postgresql
-        deploy_spec: "{{ postgres_deploy_spec }}"
-      import_tasks: k8s/object.yml
-
-    - name: save postgres deploy resource definition task output
-      set_fact:
-        k8s_postgres_deploy: "{{ k8s_object_task }}"
+    - import_tasks: postgres/service.yml
