--- a/roles/m4e/tasks/condition/created/not-created.yml
+++ b/roles/m4e/tasks/condition/created/not-created.yml
@@ -1,18 +1,18 @@
-- name: set not instantiated status
+- name: set not created status
   import_tasks: k8s/status.yml
   vars:
     lastTransitionTime: "{{ now(utc=False).isoformat(timespec='seconds') + 'Z' }}"
     k8s_status_status:
-      instantiated: "False"
+      created: "False"
       ready: "False"
     k8s_status_conditions:
-      - type: "Instantiated"
+      - type: "Created"
         status: "False"
-        reason: "NotInstantiated"
-        message: "Database has not been instantiated"
+        reason: "NotCreated"
+        message: "The site is being created"
         lastTransitionTime: "{{ lastTransitionTime }}"
       - type: "Ready"
         status: "False"
-        reason: "NotInstantiated"
-        message: "Database has not been instantiated"
+        reason: "NotCreated"
+        message: "The site has not been created"
         lastTransitionTime: "{{ lastTransitionTime }}"
