--- a/roles/m4e/tasks/condition/instantiated/not-instantiated.yml
+++ b/roles/m4e/tasks/condition/instantiated/not-instantiated.yml
@@ -1,23 +1,23 @@
-- name: set instantiated status
+- name: set not instantiated status
   import_tasks: k8s/status.yml
   vars:
     lastTransitionTime: "{{ now(utc=False).isoformat(timespec='seconds') + 'Z' }}"
     k8s_status_status:
-      instantiated: "True"
+      instantiated: "False"
       ready: "False"
     k8s_status_conditions:
       - type: "Instantiated"
-        status: "True"
-        reason: "Instantiated"
-        message: "Database has been instantiated"
+        status: "False"
+        reason: "NotInstantiated"
+        message: "Database has not been instantiated"
         lastTransitionTime: "{{ lastTransitionTime }}"
       - type: "Created"
         status: "False"
-        reason: "Instantiated"
-        message: "Database has been instantiated"
+        reason: "NotInstantiated"
+        message: "Database is being instantiated"
         lastTransitionTime: "{{ lastTransitionTime }}"
       - type: "Ready"
         status: "False"
-        reason: "Instantiated"
-        message: "Database has been instantiated"
+        reason: "NotInstantiated"
+        message: "Database has not been instantiated"
         lastTransitionTime: "{{ lastTransitionTime }}"
