--- a/roles/m4e/tasks/routine/sync-config.yml
+++ b/roles/m4e/tasks/routine/sync-config.yml
@@ -4,16 +4,7 @@
     - moodle_config_autosync
     - hostvars['localhost'].k8s_moodle_secret is defined and
       hostvars['localhost'].k8s_moodle_secret is changed
-  block:
-    - name: check config.php src file
-      stat:
-        path: "{{ moodle_config_path }}/config.php"
-      register: moodle_config_autosync_file
-
-    - name: update config.php from src file
-      when: moodle_config_autosync_file.stat.exists
-      copy:
-        remote_src: true
-        src: "{{ moodle_config_path }}/config.php"
-        dest: "{{ moodle_app }}/config.php"
-        mode: 0400
+  template:
+    src: "{{ moodle_config_template }}"
+    dest: "{{ moodle_app }}/config.php"
+    mode: 0400
