--- a/roles/m4e/defaults/main/php-fpm.yml
+++ b/roles/m4e/defaults/main/php-fpm.yml
@@ -48,6 +48,6 @@ php_fpm_service_spec: |
     targetPort: 9000
   selector:
     app: '{{ php_fpm_appname }}'
-
+php_fpm_tolerations: false
 # php-fpm config
 php_fpm_process_control_timeout: 20
