--- a/roles/m4e/defaults/main/postgres.yml
+++ b/roles/m4e/defaults/main/postgres.yml
@@ -28,7 +28,7 @@ postgres_liveness_failure: 3
 postgres_resource_requests: true
 postgres_resource_requests_cpu: 150m
 postgres_resource_requests_memory: 256Mi
-postgres_resource_limits: true
+postgres_resource_limits: false
 postgres_resource_limits_cpu: 1
 postgres_resource_limits_memory: 1Gi
 postgres_term_grace_period: 30
