--- a/roles/m4e/defaults/main/moodle.yml
+++ b/roles/m4e/defaults/main/moodle.yml
@@ -18,7 +18,7 @@ moodle_new_instance_active_deadline_seconds: "{{ moodle_new_instance_wait_timeou
 moodle_new_instance_resource_requests: true
 moodle_new_instance_resource_requests_cpu: 150m
 moodle_new_instance_resource_requests_memory: 256Mi
-moodle_new_instance_resource_limits: true
+moodle_new_instance_resource_limits: false
 moodle_new_instance_resource_limits_cpu: 1
 moodle_new_instance_resource_limits_memory: 1Gi
 moodle_new_instance_fullname: Demo site
@@ -54,7 +54,7 @@ moodle_cron_args: "['php', 'admin/cli/cron.php']"
 moodle_cron_resource_requests: true
 moodle_cron_resource_requests_cpu: 50m
 moodle_cron_resource_requests_memory: 128Mi
-moodle_cron_resource_limits: true
+moodle_cron_resource_limits: false
 moodle_cron_resource_limits_cpu: 1
 moodle_cron_resource_limits_memory: 1Gi
 moodle_cron_tolerations: false
