feat: create a service account for the operator by default

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -31,4 +31,5 @@ spec:
             - name: ANSIBLE_GATHERING
               value: explicit
           image: controller:latest
+      serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
