chore(operator): update operator version to 1.7.2

--- a/config/samples/m4e_v1alpha1_m4e.yaml
+++ b/config/samples/m4e_v1alpha1_m4e.yaml
@@ -3,6 +3,7 @@ kind: M4e
 metadata:
   name: m4e-sample
 spec:
+  # Add fields here
   moodle_new_instance_fullname: Demo site
   moodle_new_instance_shortname: demo
   moodle_new_instance_summary: A demo site
