--- a/roles/m4e/tasks/nginx/deploy.yml
+++ b/roles/m4e/tasks/nginx/deploy.yml
@@ -8,7 +8,7 @@
 
 - name: nginx deploy resource definition
   vars:
-    kind: Deployment
+    k8s_kind: Deployment
     k8s_state: "{{ nginx_deploy_state | default(nginx_state) }}"
     k8s_wait: "{{ nginx_deploy_wait | default(true) }}"
     k8s_wait_timeout: "{{ nginx_deploy_wait_timeout | default(120) }}"
