--- a/roles/m4e/tasks/nginx/service.yml
+++ b/roles/m4e/tasks/nginx/service.yml
@@ -1,6 +1,6 @@
 - name: nginx service resource definition
   vars:
-    kind: Service
+    k8s_kind: Service
     k8s_state: "{{ nginx_pvc_state | default(nginx_state) }}"
     template: "{{ service_template }}"
     metadata_name: "{{ nginx_service }}"
