--- a/roles/m4e/tasks/postgres/secret.yml
+++ b/roles/m4e/tasks/postgres/secret.yml
@@ -1,6 +1,6 @@
 - name: postgres secret resource definition
   vars:
-    kind: Secret
+    k8s_kind: Secret
     k8s_state: "{{ postgres_secret_state | default(postgres_state) }}"
     template: "{{ secret_template }}"
     metadata_name: "{{ postgres_secret }}"
