--- a/roles/m4e/defaults/main/nginx.yml
+++ b/roles/m4e/defaults/main/nginx.yml
@@ -34,12 +34,10 @@ nginx_resource_limits: false
 nginx_resource_limits_cpu: 1
 nginx_resource_limits_memory: 1Gi
 nginx_term_grace_period: 30
+nginx_run_as_user: 999
 nginx_ingress_tls: "{{ expose_tls }}"
 nginx_route_tls: "{{ expose_tls }}"
 nginx_ingress_tls_secret_name: "{{ expose_tls_secret_name }}"
-nginx_security_context: "{{ security_context }}"
-nginx_security_context_runasuser: 999
-nginx_security_context_fsgroup: "{{ php_fpm_security_context_runasuser }}"
 nginx_route_annotations: |
   haproxy.router.openshift.io/rate-limit-connections: 'true'
   haproxy.router.openshift.io/rate-limit-connections.concurrent-tcp: '100'
