--- a/roles/m4e/defaults/main/postgres.yml
+++ b/roles/m4e/defaults/main/postgres.yml
@@ -32,9 +32,7 @@ postgres_resource_limits: false
 postgres_resource_limits_cpu: 1
 postgres_resource_limits_memory: 1Gi
 postgres_term_grace_period: 30
-postgres_security_context: "{{ security_context }}"
-postgres_security_context_runasuser: 26
-postgres_security_context_fsgroup: "{{ postgres_security_context_runasuser }}"
+postgres_data: /var/lib/pgsql/data
 postgres_secret_data: |
   database_password: '{{ database_password | b64encode }}'
 postgres_service_spec: |
@@ -47,12 +45,17 @@ postgres_service_spec: |
       protocol: TCP
       targetPort: 5432
   sessionAffinity: ClientIP
+postgres_pvc_storage_access_modes: ReadWriteOnce
+postgres_pvc_size: 1Gi
 postgres_pvc_spec: |
+  {% if postgres_pvc_storage_class_name is defined and postgres_pvc_storage_class_name %}
+  storageClassName: {{ postgres_pvc_storage_class_name }}
+  {% endif %}
   accessModes:
-    - 'ReadWriteOnce'
+    - '{{ postgres_pvc_storage_access_modes }}'
   resources:
     requests:
-      storage: '1Gi'
+      storage: '{{ postgres_pvc_size }}'
 postgres_tolerations: false
 # postgres config
 postgres_log_stderr: true
