--- a/roles/m4e/tasks/moodle/config-secret.yml
+++ b/roles/m4e/tasks/moodle/config-secret.yml
@@ -1,6 +1,6 @@
 - name: moodle config.php secret resource definition
   vars:
-    kind: Secret
+    k8s_kind: Secret
     k8s_state: "{{ moodle_secret_state | default(moodle_state) }}"
     template: "{{ secret_template }}"
     metadata_name: "{{ moodle_secret }}"
