--- a/roles/m4e/tasks/php-fpm/deploy.yml
+++ b/roles/m4e/tasks/php-fpm/deploy.yml
@@ -8,7 +8,7 @@
 
 - name: php-fpm deploy resource definition
   vars:
-    kind: Deployment
+    k8s_kind: Deployment
     k8s_state: "{{ php_fpm_deploy_state | default(php_fpm_state) }}"
     k8s_wait: "{{ php_fpm_deploy_wait | default(true) }}"
     k8s_wait_timeout: "{{ php_fpm_deploy_wait_timeout | default(120) }}"
