--- a/roles/m4e/tasks/php-fpm/service.yml
+++ b/roles/m4e/tasks/php-fpm/service.yml
@@ -1,6 +1,6 @@
 - name: php-fpm service resource definition
   vars:
-    kind: Service
+    k8s_kind: Service
     k8s_state: "{{ php_fpm_service_state | default(php_fpm_state) }}"
     template: "{{ service_template }}"
     metadata_name: "{{ php_fpm_service }}"
