--- a/roles/m4e/tasks/postgres.yml
+++ b/roles/m4e/tasks/postgres.yml
@@ -7,9 +7,14 @@
     metadata_app: "{{ postgres_appname }}"
   block:
     - import_tasks: postgres/pvc.yml
+      when: "postgres_pvc_state | default(postgres_state) != 'absent'"
 
     - import_tasks: postgres/secret.yml
 
     - import_tasks: postgres/deploy.yml
 
     - import_tasks: postgres/service.yml
+
+    # change order when deleting pvc
+    - import_tasks: postgres/pvc.yml
+      when: "postgres_pvc_state | default(postgres_state) == 'absent'"
